fixed nil bug again

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.10)
 project(bug C)
 
-add_compile_options(-pedantic -Wall -std=c89)
+add_compile_options(-pedantic -Wall -std=c89 -g)
 
 add_executable(bug 
   src/bug.c 
